2007-11-20  Manuel Arostegui <marostegui@artica.es>

	* pandora_snmpconsole,pandora_server,pandora_recon,pandora_network: Fixed
	  bug #1822659.

2007-11-19  Sancho Lerena <slerena@gmail.com>

	* pandora_network: Fixed problem with default retries of SNMP library. Now is 0
	
2007-10-09  Sancho Lerena <slerena@gmail.com>

	* pandora_snmpconfole: Fixed parameter for snmptrapd call (%a instead %B). This
	was causing problems (do not detect IP Address) on Redhat systems.

2007-10-08  Sancho Lerena <slerena@gmail.com>

	* lib/PandoraFMS/Config.pm: Updated build number.

	* lib/PandoraFMS/DB.pm: Fixed some problems with alert recovery/expired method, 
	that causes to do not recognize expired alerts in some situations (min_alert=0).

2007-10-04  Sancho Lerena <slerena@gmail.com>

	* lib/PandoraFMS/DB.pm: Fixed a missing $ in sub header definition for args :( 
	and some warnings also fixed.

	* conf/pandora_server.conf, lib/PandoraFMS/Config.pm, bin/pandora_network:

	Merged code from NG branch: Added multiping check (global setting 'icmp_checks')
	on network server because in some WAN enviroments with erratic packet loss on non TCP
	connections would cause recurrent false positives. New config token added to config
	file (icmp_checks).

2007-10-03  Sancho lerena <slerena@gmail.com>

	* lib/PandoraFMS/DB.pm: Fixed alert that fires always one time more than
	max_alert defined. Also fixed several issues with "Ceased" support for alerts
	and correct internal_counter problem. Now works fine !

	* util/pandora_db.pl: Purge of tagent_access was not working fine, and fixed
	another problem with id_agent 0 data in tagente_datos.

	After about 12 hours of intense testing this seems to work very fine, probably
	this server code will be the final ! :-)

2007-10-02  Sancho Lerena  <slerena@gmail.com>

	* lib/PandoraFMS/DB.pm: Updated and fixed several problems with alerts. 
	Now notification of alert ceased is properly implemented and works